@@ -1,29 +1,23 @@
 package com.ftc.containerView.service;
 
-import com.ftc.containerView.infra.errorhandling.exceptions.ContainerNotFoundException;
-import com.ftc.containerView.infra.errorhandling.exceptions.OperationNotFoundException;
-import com.ftc.containerView.infra.errorhandling.exceptions.UserNotFoundException;
-import com.ftc.containerView.model.container.Container;
-import com.ftc.containerView.model.container.ContainerStatus;
-import com.ftc.containerView.model.container.CreateContainerDTO;
-import com.ftc.containerView.model.container.UpdateContainerDTO;
+import com.ftc.containerView.infra.errorhandling.exceptions.*;
+import com.ftc.containerView.infra.security.InputSanitizer;
+import com.ftc.containerView.model.container.*;
 import com.ftc.containerView.model.images.AddImagesToContainerResultDTO;
 import com.ftc.containerView.model.images.ContainerImage;
 import com.ftc.containerView.model.images.ContainerImageCategory;
 import com.ftc.containerView.model.operation.Operation;
-import com.ftc.containerView.model.operation.OperationStatus;
 import com.ftc.containerView.model.user.User;
 import com.ftc.containerView.repositories.ContainerRepository;
 import com.ftc.containerView.repositories.OperationRepository;
 import com.ftc.containerView.repositories.UserRepository;
-import com.ftc.containerView.infra.security.InputSanitizer;
+import jakarta.transaction.Transactional;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.*;
@@ -41,7 +35,9 @@ public class ContainerService {
     private final InputSanitizer inputSanitizer;
 
     @Autowired
-    public ContainerService(ContainerRepository containerRepository, UserRepository userRepository, StoreImageService storeImageService, OperationRepository operationRepository, InputSanitizer inputSanitizer) {
+    public ContainerService(ContainerRepository containerRepository, UserRepository userRepository,
+                            StoreImageService storeImageService, OperationRepository operationRepository,
+                            InputSanitizer inputSanitizer) {
         this.containerRepository = containerRepository;
         this.userRepository = userRepository;
         this.storeImageService = storeImageService;
@@ -49,6 +45,9 @@ public class ContainerService {
         this.inputSanitizer = inputSanitizer;
     }
 
+    /**
+     * Cria um novo container (versão simplificada - usado pelo endpoint POST /containers)
+     */
     public Container createContainer(CreateContainerDTO container) {
         logger.info("Criando novo container: {}", container.containerId());
         try {
@@ -56,269 +55,122 @@ public class ContainerService {
             String sanitizedContainerId = inputSanitizer.sanitizePlainText(container.containerId());
             String sanitizedDescription = inputSanitizer.sanitizeBasicHtml(container.description());
             String sanitizedAgencySeal = inputSanitizer.sanitizePlainText(container.agencySeal());
+
+            // ✅ CORREÇÃO: Usar collect(Collectors.toList()) em vez de toList()
             List<String> sanitizedOtherSeals = null;
             if (container.otherSeals() != null) {
                 sanitizedOtherSeals = container.otherSeals().stream()
-                    .map(inputSanitizer::sanitizePlainText)
-                    .toList();
+                        .map(inputSanitizer::sanitizePlainText)
+                        .collect(Collectors.toList());  // ✅ LISTA MUTÁVEL
             }
 
-            Container newContainer = new Container(sanitizedContainerId, sanitizedDescription,
-                    userRepository.findById(container.userId()).get(), operationRepository.findById(container.operationId()).get(),
-                    container.sacksCount(), container.tareTons(), container.liquidWeight(), container.grossWeight(),
-                    sanitizedAgencySeal, sanitizedOtherSeals, container.status());
+            Container newContainer = new Container(
+                    sanitizedContainerId,
+                    sanitizedDescription,
+                    userRepository.findById(container.userId()).get(),
+                    operationRepository.findById(container.operationId()).get(),
+                    container.sacksCount(),
+                    container.tareTons(),
+                    container.liquidWeight(),
+                    container.grossWeight(),
+                    sanitizedAgencySeal,
+                    sanitizedOtherSeals,
+                    container.status()
+            );
+
             Container saved = containerRepository.save(newContainer);
             logger.info("Container criado com sucesso: {}", saved.getId());
             return saved;
+
         } catch (IllegalArgumentException e) {
-            logger.error("Erro ao criar container: {}. Erro: {}", container.containerId(), e.getMessage(), e);
-            throw new ContainerNotFoundException("Container nao encontrado com ID: " + container.containerId());
+            logger.error("Erro ao criar container: {}", e.getMessage(), e);
+            throw new ContainerNotFoundException("Container não encontrado com ID: " + container.containerId());
         }
     }
 
-    public Page<Container> getContainers(Pageable pageable) {
-        logger.info("Buscando containers com paginação - Página: {}, Tamanho: {}",
-                pageable.getPageNumber(), pageable.getPageSize());
-
-        Page<Container> containers = containerRepository.findAll(pageable);
-
-        logger.info("Encontrados {} containers na página {} de {} (Total: {})",
-                containers.getNumberOfElements(),
-                containers.getNumber() + 1,
-                containers.getTotalPages(),
-                containers.getTotalElements());
-
-        return containers;
-    }
-
-    public Page<Container> getContainersByOperation(Long operationId, Pageable pageable) {
-        logger.info("Buscando containers da operação {} - Página: {}, Tamanho: {}",
-                operationId, pageable.getPageNumber(), pageable.getPageSize());
-
-        Operation operation = operationRepository.findById(operationId)
-                .orElseThrow(() -> {
-                    logger.warn("Operação com ID {} não encontrada", operationId);
-                    return new OperationNotFoundException("Operação não encontrada com ID: " + operationId);
-                });
-
-        Page<Container> containers = containerRepository.findByOperation(operation, pageable);
-
-        logger.info("Encontrados {} containers da operação {} na página {} de {} (Total: {})",
-                containers.getNumberOfElements(), operationId,
-                containers.getNumber() + 1, containers.getTotalPages(),
-                containers.getTotalElements());
-
-        return containers;
-    }
-
-    public Page<Container> getContainersByStatus(ContainerStatus status, Pageable pageable) {
-        logger.info("Buscando containers com status {} - Página: {}, Tamanho: {}",
-                status, pageable.getPageNumber(), pageable.getPageSize());
-
-        Page<Container> containers = containerRepository.findByStatus(status, pageable);
-
-        logger.info("Encontrados {} containers com status {} na página {} de {} (Total: {})",
-                containers.getNumberOfElements(), status,
-                containers.getNumber() + 1, containers.getTotalPages(),
-                containers.getTotalElements());
-
-        return containers;
-    }
-
+    /**
+     * Cria um novo container com validações completas
+     * (versão robusta - usado internamente ou pelo endpoint POST /containers/images)
+     */
     @Transactional
-    public List<Container> createMultipleContainers(List<CreateContainerDTO> containerDTOs, Long userId) {
-        logger.info("Criando {} containers em lote para usuário {}", containerDTOs.size(), userId);
+    public Container createContainerWithValidations(CreateContainerDTO containerDTO) {
+        logger.info("Criando novo container com validações: {}", containerDTO.containerId());
 
-        // Validar usuário uma vez só
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("Usuário não encontrado com ID: " + userId));
-
-        List<Container> createdContainers = new ArrayList<>();
-        Set<String> containerIds = new HashSet<>();
-
-        // Validar IDs duplicados na própria lista
-        for (CreateContainerDTO dto : containerDTOs) {
-            if (!containerIds.add(dto.containerId())) {
-                logger.error("Container duplicado na requisição: {}", dto.containerId());
-                throw new IllegalArgumentException("Container duplicado na requisição: " + dto.containerId());
-            }
-        }
-
-        // Criar cada container
-        for (CreateContainerDTO containerDTO : containerDTOs) {
-            try {
-                // Verificar se já existe
-                if (containerRepository.existsById(containerDTO.containerId())) {
-                    logger.error("Container já existe: {}", containerDTO.containerId());
-                    throw new IllegalArgumentException("Container já existe: " + containerDTO.containerId());
-                }
-
-                // Validar operação existe
-                Operation operation = operationRepository.findById(containerDTO.operationId())
-                        .orElseThrow(() -> new OperationNotFoundException(
-                                "Operação não encontrada: " + containerDTO.operationId()));
-
-                // Sanitização dos campos de texto livre
-                String sanitizedContainerId = inputSanitizer.sanitizePlainText(containerDTO.containerId());
-                String sanitizedDescription = inputSanitizer.sanitizeBasicHtml(containerDTO.description());
-                String sanitizedAgencySeal = inputSanitizer.sanitizePlainText(containerDTO.agencySeal());
-                List<String> sanitizedOtherSeals = null;
-                if (containerDTO.otherSeals() != null) {
-                    sanitizedOtherSeals = containerDTO.otherSeals().stream()
-                        .map(inputSanitizer::sanitizePlainText)
-                        .toList();
-                }
-
-                // Criar container usando campos sanitizados
-                Container newContainer = new Container(
-                        sanitizedContainerId,
-                        sanitizedDescription,
-                        user,
-                        operation,
-                        containerDTO.sacksCount(),
-                        containerDTO.tareTons(),
-                        containerDTO.liquidWeight(),
-                        containerDTO.grossWeight(),
-                        sanitizedAgencySeal,
-                        sanitizedOtherSeals,
-                        containerDTO.status() != null ? containerDTO.status() : ContainerStatus.PENDING
-                );
-
-                Container saved = containerRepository.save(newContainer);
-                createdContainers.add(saved);
-
-                logger.debug("Container {} criado com sucesso", sanitizedContainerId);
-
-            } catch (Exception e) {
-                // Em caso de erro, fazer rollback de toda a transação
-                logger.error("Erro ao criar container {}: {}", containerDTO.containerId(), e.getMessage());
-                throw new RuntimeException("Erro ao criar container " + containerDTO.containerId() + ": " + e.getMessage(), e);
-            }
-        }
-
-        logger.info("{} containers criados com sucesso", createdContainers.size());
-        return createdContainers;
-    }
-
-    @Transactional
-    public AddImagesToContainerResultDTO addImagesToContainer(
-            Container container,
-            MultipartFile[] vazioForradoImages,
-            MultipartFile[] fiadaImages,
-            MultipartFile[] cheioAbertoImages,
-            MultipartFile[] meiaPortaImages,
-            MultipartFile[] lacradoFechadoImages,
-            MultipartFile[] lacresPrincipalImages,
-            MultipartFile[] lacresOutrosImages,
-            Long userId) {
-
-        logger.info("Adicionando imagens ao container ID: {} por usuário ID: {}",
-                container.getContainerId(), userId);
-
-        // Verificar permissões (opcional - depende das regras de negócio)
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("Usuário não encontrado com ID: " + userId));
-
-        List<ContainerImage> newImages = new ArrayList<>();
-        Map<String, Integer> imagesByCategory = new HashMap<>();
-
-        // Processar cada categoria de imagem
-        if (vazioForradoImages != null && vazioForradoImages.length > 0) {
-            List<ContainerImage> images = storeImageService.storeImagesToContainer(
-                    vazioForradoImages, container.getId(), ContainerImageCategory.VAZIO_FORRADO);
-            newImages.addAll(images);
-            imagesByCategory.put("VAZIO_FORRADO", images.size());
-            logger.debug("Adicionadas {} imagens VAZIO_FORRADO", images.size());
-        }
-
-        if (fiadaImages != null && fiadaImages.length > 0) {
-            List<ContainerImage> images = storeImageService.storeImagesToContainer(
-                    fiadaImages, container.getId(), ContainerImageCategory.FIADA);
-            newImages.addAll(images);
-            imagesByCategory.put("FIADA", images.size());
-            logger.debug("Adicionadas {} imagens FIADA", images.size());
-        }
-
-        if (cheioAbertoImages != null && cheioAbertoImages.length > 0) {
-            List<ContainerImage> images = storeImageService.storeImagesToContainer(
-                    cheioAbertoImages, container.getId(), ContainerImageCategory.CHEIO_ABERTO);
-            newImages.addAll(images);
-            imagesByCategory.put("CHEIO_ABERTO", images.size());
-            logger.debug("Adicionadas {} imagens CHEIO_ABERTO", images.size());
-        }
-
-        if (meiaPortaImages != null && meiaPortaImages.length > 0) {
-            List<ContainerImage> images = storeImageService.storeImagesToContainer(
-                    meiaPortaImages, container.getId(), ContainerImageCategory.MEIA_PORTA);
-            newImages.addAll(images);
-            imagesByCategory.put("MEIA_PORTA", images.size());
-            logger.debug("Adicionadas {} imagens MEIA_PORTA", images.size());
-        }
-
-        if (lacradoFechadoImages != null && lacradoFechadoImages.length > 0) {
-            List<ContainerImage> images = storeImageService.storeImagesToContainer(
-                    lacradoFechadoImages, container.getId(), ContainerImageCategory.LACRADO_FECHADO);
-            newImages.addAll(images);
-            imagesByCategory.put("LACRADO_FECHADO", images.size());
-            logger.debug("Adicionadas {} imagens LACRADO_FECHADO", images.size());
-        }
-
-        if (lacresPrincipalImages != null && lacresPrincipalImages.length > 0) {
-            List<ContainerImage> images = storeImageService.storeImagesToContainer(
-                    lacresPrincipalImages, container.getId(), ContainerImageCategory.LACRES_PRINCIPAIS);
-            newImages.addAll(images);
-            imagesByCategory.put("LACRES_PRINCIPAIS", images.size());
-            logger.debug("Adicionadas {} imagens LACRES_PRINCIPAIS", images.size());
-        }
-
-        if (lacresOutrosImages != null && lacresOutrosImages.length > 0) {
-            List<ContainerImage> images = storeImageService.storeImagesToContainer(
-                    lacresOutrosImages, container.getId(), ContainerImageCategory.LACRES_OUTROS);
-            newImages.addAll(images);
-            imagesByCategory.put("LACRES_OUTROS", images.size());
-            logger.debug("Adicionadas {} imagens LACRES_OUTROS", images.size());
-        }
-
-        // Adicionar as novas imagens à lista existente do container
-        container.getContainerImages().addAll(newImages);
-
-        // Salvar o container atualizado
-        Container savedContainer = containerRepository.save(container);
-
-        logger.info("Total de {} imagens adicionadas ao container {}",
-                newImages.size(), container.getContainerId());
-
-        return new AddImagesToContainerResultDTO(
-                savedContainer,
-                newImages.size(),
-                imagesByCategory
-        );
-    }
-
-    public Container saveContainer(Container container) {
-        logger.info("Salvando novo container: {}", container.getId());
         try {
-            Container saved = containerRepository.save(container);
-            logger.info("Container salvo com sucesso: {}", saved.getId());
+            // Buscar usuário
+            User user = userRepository.findById(containerDTO.userId())
+                    .orElseThrow(() -> new UserNotFoundException(
+                            "Usuário não encontrado: " + containerDTO.userId()));
+
+            // Verificar se já existe
+            if (containerRepository.existsByContainerId(containerDTO.containerId())) {
+                logger.error("Container já existe: {}", containerDTO.containerId());
+                throw new IllegalArgumentException("Container já existe: " + containerDTO.containerId());
+            }
+
+            // Validar operação existe
+            Operation operation = operationRepository.findById(containerDTO.operationId())
+                    .orElseThrow(() -> new OperationNotFoundException(
+                            "Operação não encontrada: " + containerDTO.operationId()));
+
+            // Sanitização dos campos de texto livre
+            String sanitizedContainerId = inputSanitizer.sanitizePlainText(containerDTO.containerId());
+            String sanitizedDescription = inputSanitizer.sanitizeBasicHtml(containerDTO.description());
+            String sanitizedAgencySeal = inputSanitizer.sanitizePlainText(containerDTO.agencySeal());
+
+            // ✅ CORREÇÃO: Usar collect(Collectors.toList()) em vez de toList()
+            List<String> sanitizedOtherSeals = null;
+            if (containerDTO.otherSeals() != null) {
+                sanitizedOtherSeals = containerDTO.otherSeals().stream()
+                        .map(inputSanitizer::sanitizePlainText)
+                        .collect(Collectors.toList());  // ✅ LISTA MUTÁVEL
+            }
+
+            // Criar container usando campos sanitizados
+            Container newContainer = new Container(
+                    sanitizedContainerId,
+                    sanitizedDescription,
+                    user,
+                    operation,
+                    containerDTO.sacksCount(),
+                    containerDTO.tareTons(),
+                    containerDTO.liquidWeight(),
+                    containerDTO.grossWeight(),
+                    sanitizedAgencySeal,
+                    sanitizedOtherSeals,
+                    containerDTO.status() != null ? containerDTO.status() : ContainerStatus.PENDING
+            );
+
+            Container saved = containerRepository.save(newContainer);
+            logger.info("Container criado com sucesso: {}", saved.getId());
             return saved;
+
+        } catch (UserNotFoundException | OperationNotFoundException e) {
+            throw e;
         } catch (IllegalArgumentException e) {
-            logger.error("Erro ao salvar container: {}. Erro: {}", container.getId(), e.getMessage(), e);
-            throw new ContainerNotFoundException("Container nao encontrado com ID: " + container.getId());
+            logger.error("Erro ao criar container: {}", e.getMessage());
+            throw e;
+        } catch (Exception e) {
+            logger.error("Erro inesperado ao criar container: {}", e.getMessage(), e);
+            throw new RuntimeException("Erro ao criar container", e);
         }
     }
 
+    /**
+     * Atualiza um container existente
+     */
     @Transactional
     public Container updateContainer(String containerId, UpdateContainerDTO updateDTO, Long userId) {
         logger.info("Atualizando container com ID: {} por usuário ID: {}", containerId, userId);
 
         try {
-            Container existingContainer = containerRepository.findById(containerId)
+            Container existingContainer = containerRepository.findByContainerId(containerId)
                     .orElseThrow(() -> {
-                        logger.warn("Container com ID {} não encontrado.", containerId);
+                        logger.warn("Container não encontrado com ID: {}", containerId);
                         return new ContainerNotFoundException("Container não encontrado com ID: " + containerId);
                     });
 
-            // Verificar se o usuário tem permissão para atualizar (opcional - depende das regras de negócio)
+            // Verificar se o usuário tem permissão para atualizar (opcional)
             User user = userRepository.findById(userId)
                     .orElseThrow(() -> new UserNotFoundException("Usuário não encontrado com ID: " + userId));
 
@@ -364,9 +216,10 @@ public class ContainerService {
             }
 
             if (updateDTO.otherSeals() != null && !existingContainer.getOtherSeals().equals(updateDTO.otherSeals())) {
+                // ✅ CORREÇÃO: Usar collect(Collectors.toList()) em vez de toList()
                 List<String> sanitizedOtherSeals = updateDTO.otherSeals().stream()
-                    .map(inputSanitizer::sanitizePlainText)
-                    .toList();
+                        .map(inputSanitizer::sanitizePlainText)
+                        .collect(Collectors.toList());  // ✅ LISTA MUTÁVEL
                 existingContainer.setOtherSeals(sanitizedOtherSeals);
                 changed = true;
                 logger.debug("Outros lacres atualizados");
@@ -394,6 +247,9 @@ public class ContainerService {
         }
     }
 
+    /**
+     * Busca todos os containers
+     */
     public List<Container> getContainers() {
         logger.info("Buscando todos os containers.");
         List<Container> containers = containerRepository.findAll();
@@ -401,6 +257,27 @@ public class ContainerService {
         return containers;
     }
 
+    /**
+     * Busca todos os containers com paginação
+     */
+    public Page<Container> getContainers(Pageable pageable) {
+        logger.info("Buscando containers com paginação - Página: {}, Tamanho: {}",
+                pageable.getPageNumber(), pageable.getPageSize());
+
+        Page<Container> containers = containerRepository.findAll(pageable);
+
+        logger.info("Encontrados {} containers na página {} de {} (Total: {})",
+                containers.getNumberOfElements(),
+                containers.getNumber() + 1,
+                containers.getTotalPages(),
+                containers.getTotalElements());
+
+        return containers;
+    }
+
+    /**
+     * Busca container por ID
+     */
     public Container getContainersById(String id) {
         logger.info("Buscando container por ID: {}", id);
         Optional<Container> container = containerRepository.findById(id);
@@ -408,18 +285,75 @@ public class ContainerService {
             logger.info("Container com ID {} encontrado.", id);
             return container.get();
         } else {
-            logger.warn("Container com ID {} n 3o encontrado.", id);
-            throw new ContainerNotFoundException("Container nao encontrado com ID: " + id);
+            logger.warn("Container com ID {} não encontrado.", id);
+            throw new ContainerNotFoundException("Container não encontrado com ID: " + id);
         }
     }
 
+    /**
+     * Busca container por containerId (identificador do container, não ID do banco)
+     */
+    public Container getContainersByContainerId(String containerId) {
+        logger.info("Buscando container por containerId: {}", containerId);
+        Optional<Container> container = containerRepository.findByContainerId(containerId);
+        if (container.isPresent()) {
+            logger.info("Container com containerId {} encontrado.", containerId);
+            return container.get();
+        } else {
+            logger.warn("Container com containerId {} não encontrado.", containerId);
+            throw new ContainerNotFoundException("Container não encontrado com ID: " + containerId);
+        }
+    }
 
+    /**
+     * Busca containers por operação com paginação
+     */
+    public Page<Container> getContainersByOperation(Long operationId, Pageable pageable) {
+        logger.info("Buscando containers da operação {} - Página: {}, Tamanho: {}",
+                operationId, pageable.getPageNumber(), pageable.getPageSize());
+
+        Operation operation = operationRepository.findById(operationId)
+                .orElseThrow(() -> {
+                    logger.warn("Operação com ID {} não encontrada", operationId);
+                    return new OperationNotFoundException("Operação não encontrada com ID: " + operationId);
+                });
+
+        Page<Container> containers = containerRepository.findByOperation(operation, pageable);
+
+        logger.info("Encontrados {} containers da operação {} na página {} de {} (Total: {})",
+                containers.getNumberOfElements(), operationId,
+                containers.getNumber() + 1, containers.getTotalPages(),
+                containers.getTotalElements());
+
+        return containers;
+    }
+
+    /**
+     * Busca containers por status com paginação
+     */
+    public Page<Container> getContainersByStatus(ContainerStatus status, Pageable pageable) {
+        logger.info("Buscando containers com status {} - Página: {}, Tamanho: {}",
+                status, pageable.getPageNumber(), pageable.getPageSize());
+
+        Page<Container> containers = containerRepository.findByStatus(status, pageable);
+
+        logger.info("Encontrados {} containers com status {} na página {} de {} (Total: {})",
+                containers.getNumberOfElements(), status,
+                containers.getNumber() + 1, containers.getTotalPages(),
+                containers.getTotalElements());
+
+        return containers;
+    }
+
+    /**
+     * Deleta um container por ID
+     */
     public void deleteContainer(String id) {
         logger.info("Excluindo container com ID: {}", id);
         try {
             if (!containerRepository.existsById(id)) {
-                logger.warn("Usuário com ID {} nao encontrado.", id);
-                throw new ContainerNotFoundException("Container nao encontrado com ID: " + id);
+                logger.warn("Container com ID {} não encontrado.", id);
+                throw new ContainerNotFoundException("Container não encontrado com ID: " + id);
             }
             containerRepository.deleteById(id);
             logger.info("Container com ID {} excluído com sucesso.", id);
@@ -429,19 +363,10 @@ public class ContainerService {
         }
     }
 
-    public Container getContainersByContainerId(String id) {
-        logger.info("Buscando container por ID: {}", id);
-        Optional<Container> container = containerRepository.findById(id);
-        if (container.isPresent()) {
-            logger.info("Container com ID {} encontrado.", id);
-            return container.get();
-        } else {
-            logger.warn("Container com ID {} nulo encontrado.", id);
-            throw new ContainerNotFoundException("Container nao encontrado com ID: " + id);
-        }
-    }
-
-    public Container completeContainerStatus (String containerId) {
+    /**
+     * Completa o status de um container (muda para COMPLETED)
+     */
+    public Container completeContainerStatus(String containerId) {
         logger.info("Mudando status para FINALIZADO do container com ID: {}", containerId);
 
         Container container = containerRepository.findByContainerId(containerId)
@@ -465,6 +390,9 @@ public class ContainerService {
         return containerRepository.save(container);
     }
 
+    /**
+     * Valida se todas as categorias obrigatórias de imagens estão presentes
+     */
     public void validateMandatoryCategories(List<ContainerImage> images) {
         Set<ContainerImageCategory> mandatoryCategories = Set.of(
                 ContainerImageCategory.VAZIO_FORRADO,
@@ -482,10 +410,13 @@ public class ContainerService {
         if (!presentCategories.containsAll(mandatoryCategories)) {
             throw new IllegalArgumentException("Todas as 6 categorias obrigatórias devem ter pelo menos 1 imagem");
         } else {
-            logger.info("Todas as 6 categorias obrigatórias contem pelo menos 1 imagem");
+            logger.info("Todas as 6 categorias obrigatórias contêm pelo menos 1 imagem");
         }
     }
 
+    /**
+     * Valida transições de status do container
+     */
     private void validateContainerStatusTransition(ContainerStatus currentStatus, ContainerStatus newStatus) {
         logger.debug("Validando transição de status de {} para {}", currentStatus, newStatus);
 
@@ -504,5 +435,173 @@ public class ContainerService {
         }
 
         logger.debug("Transição de status válida");
+    }
+
+    /**
+     * Cria múltiplos containers em lote
+     */
+    @Transactional
+    public List<Container> createMultipleContainers(List<CreateContainerDTO> containerDTOs, Long userId) {
+        logger.info("Criando {} containers em lote para usuário {}", containerDTOs.size(), userId);
+
+        // Validar usuário uma vez só
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new UserNotFoundException("Usuário não encontrado com ID: " + userId));
+
+        List<Container> createdContainers = new ArrayList<>();
+        Set<String> containerIds = new HashSet<>();
+
+        // Validar IDs duplicados na própria lista
+        for (CreateContainerDTO dto : containerDTOs) {
+            if (!containerIds.add(dto.containerId())) {
+                logger.error("Container duplicado na requisição: {}", dto.containerId());
+                throw new IllegalArgumentException("Container duplicado na requisição: " + dto.containerId());
+            }
+        }
+
+        // Criar cada container
+        for (CreateContainerDTO containerDTO : containerDTOs) {
+            try {
+                // Verificar se já existe
+                if (containerRepository.existsByContainerId(containerDTO.containerId())) {
+                    logger.error("Container já existe: {}", containerDTO.containerId());
+                    throw new IllegalArgumentException("Container já existe: " + containerDTO.containerId());
+                }
+
+                // Validar operação existe
+                Operation operation = operationRepository.findById(containerDTO.operationId())
+                        .orElseThrow(() -> new OperationNotFoundException(
+                                "Operação não encontrada: " + containerDTO.operationId()));
+
+                // Sanitização dos campos de texto livre
+                String sanitizedContainerId = inputSanitizer.sanitizePlainText(containerDTO.containerId());
+                String sanitizedDescription = inputSanitizer.sanitizeBasicHtml(containerDTO.description());
+                String sanitizedAgencySeal = inputSanitizer.sanitizePlainText(containerDTO.agencySeal());
+
+                // ✅ CORREÇÃO: Usar collect(Collectors.toList()) em vez de toList()
+                List<String> sanitizedOtherSeals = null;
+                if (containerDTO.otherSeals() != null) {
+                    sanitizedOtherSeals = containerDTO.otherSeals().stream()
+                            .map(inputSanitizer::sanitizePlainText)
+                            .collect(Collectors.toList());  // ✅ LISTA MUTÁVEL
+                }
+
+                Container newContainer = new Container(
+                        sanitizedContainerId,
+                        sanitizedDescription,
+                        user,
+                        operation,
+                        containerDTO.sacksCount(),
+                        containerDTO.tareTons(),
+                        containerDTO.liquidWeight(),
+                        containerDTO.grossWeight(),
+                        sanitizedAgencySeal,
+                        sanitizedOtherSeals,
+                        containerDTO.status() != null ? containerDTO.status() : ContainerStatus.PENDING
+                );
+
+                Container saved = containerRepository.save(newContainer);
+                createdContainers.add(saved);
+
+                logger.debug("Container {} criado com sucesso", sanitizedContainerId);
+
+            } catch (Exception e) {
+                // Em caso de erro, fazer rollback de toda a transação
+                logger.error("Erro ao criar container {}: {}", containerDTO.containerId(), e.getMessage());
+                throw new RuntimeException("Erro ao criar container " + containerDTO.containerId() + ": " + e.getMessage(), e);
+            }
+        }
+
+        logger.info("{} containers criados com sucesso", createdContainers.size());
+        return createdContainers;
+    }
+
+    /**
+     * Adiciona imagens a um container existente
+     */
+    @Transactional
+    public AddImagesToContainerResultDTO addImagesToContainer(
+            Container container,
+            MultipartFile[] vazioForradoImages,
+            MultipartFile[] fiadaImages,
+            MultipartFile[] cheioAbertoImages,
+            MultipartFile[] meiaPortaImages,
+            MultipartFile[] lacradoFechadoImages,
+            MultipartFile[] lacresPrincipalImages,
+            MultipartFile[] lacresOutrosImages,
+            Long userId) {
+
+        logger.info("Adicionando imagens ao container ID: {} por usuário ID: {}",
+                container.getContainerId(), userId);
+
+        // Verificar permissões (opcional)
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new UserNotFoundException("Usuário não encontrado com ID: " + userId));
+
+        List<ContainerImage> newImages = new ArrayList<>();
+        Map<String, Integer> imagesByCategory = new HashMap<>();
+
+        // Processar cada categoria de imagem
+        if (vazioForradoImages != null && vazioForradoImages.length > 0) {
+            List<ContainerImage> images = storeImageService.storeImagesToContainer(
+                    vazioForradoImages, container.getId(), ContainerImageCategory.VAZIO_FORRADO);
+            newImages.addAll(images);
+            imagesByCategory.put("VAZIO_FORRADO", images.size());
+        }
+
+        if (fiadaImages != null && fiadaImages.length > 0) {
+            List<ContainerImage> images = storeImageService.storeImagesToContainer(
+                    fiadaImages, container.getId(), ContainerImageCategory.FIADA);
+            newImages.addAll(images);
+            imagesByCategory.put("FIADA", images.size());
+        }
+
+        if (cheioAbertoImages != null && cheioAbertoImages.length > 0) {
+            List<ContainerImage> images = storeImageService.storeImagesToContainer(
+                    cheioAbertoImages, container.getId(), ContainerImageCategory.CHEIO_ABERTO);
+            newImages.addAll(images);
+            imagesByCategory.put("CHEIO_ABERTO", images.size());
+        }
+
+        if (meiaPortaImages != null && meiaPortaImages.length > 0) {
+            List<ContainerImage> images = storeImageService.storeImagesToContainer(
+                    meiaPortaImages, container.getId(), ContainerImageCategory.MEIA_PORTA);
+            newImages.addAll(images);
+            imagesByCategory.put("MEIA_PORTA", images.size());
+        }
+
+        if (lacradoFechadoImages != null && lacradoFechadoImages.length > 0) {
+            List<ContainerImage> images = storeImageService.storeImagesToContainer(
+                    lacradoFechadoImages, container.getId(), ContainerImageCategory.LACRADO_FECHADO);
+            newImages.addAll(images);
+            imagesByCategory.put("LACRADO_FECHADO", images.size());
+        }
+
+        if (lacresPrincipalImages != null && lacresPrincipalImages.length > 0) {
+            List<ContainerImage> images = storeImageService.storeImagesToContainer(
+                    lacresPrincipalImages, container.getId(), ContainerImageCategory.LACRES_PRINCIPAIS);
+            newImages.addAll(images);
+            imagesByCategory.put("LACRES_PRINCIPAIS", images.size());
+        }
+
+        if (lacresOutrosImages != null && lacresOutrosImages.length > 0) {
+            List<ContainerImage> images = storeImageService.storeImagesToContainer(
+                    lacresOutrosImages, container.getId(), ContainerImageCategory.LACRES_OUTROS);
+            newImages.addAll(images);
+            imagesByCategory.put("LACRES_OUTROS", images.size());
+        }
+
+        // Adicionar novas imagens ao container
+        container.getContainerImages().addAll(newImages);
+        Container updatedContainer = containerRepository.save(container);
+
+        logger.info("Total de {} imagens adicionadas ao container ID: {}",
+                newImages.size(), container.getContainerId());
+
+        return new AddImagesToContainerResultDTO(
+                updatedContainer,
+                newImages.size(),
+                imagesByCategory
+        );
     }
 }
